# VBVR-DataFactory

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPLETION_REPORT.md  DLQ_ANALYSIS.md  Dockerfile  README.md  cdk.json  check_completion.sh  check_temp_3.sh  complete_missing.sh  lambda_handler.py  pyproject.toml  requirements-all.txt  run_temp.sh  run_temp_2.sh  run_temp_3.sh
cdk/: app.py
cloudformation/: VmDatasetPipelineStack.template.json
deployment/: cdk.json
dlq_analysis/: 20260115_091544_06403e8c-061a-437e-be27-4ec7ce21f773.json  20260115_091544_0cc70132-ffa0-4014-a873-251a941711c2.json  20260115_091544_0f7a04c8-f7b2-4202-ba9a-685a0ae95762.json  20260115_091544_1b981307-c735-45f2-b909-aa921ef90e93.json  20260115_091544_1c4ea2df-e857-420b-8af0-8388b40710f5.json  20260115_091544_36401410-646b-4f49-8bcf-6fb16c17d4d7.json  20260115_091544_6d73fc27-a5a9-4025-8b79-95d21246d50d.json  20260115_091544_7b6ebd10-a545-4aa8-a71b-058b4e1a4415.json  20260115_091544_a3476770-e9d6-4233-a3e3-296d0e429663.json  20260115_091544_ff72d990-09ca-4ca1-a7cf-5b1ebad24dd8.json
dlq_analysis_full/: 20260115_091802_05aeb70c-a639-4d99-bff6-7bfc1538a9ce.json  20260115_091802_05be5a32-df63-482c-9b68-589bbadb6e7d.json  20260115_091802_093e7d92-88bb-4ea1-a1f8-115379f4fe1e.json  20260115_091802_0fb58b2c-a0bf-496a-ada0-483491ed4775.json  20260115_091802_24009df6-2f0d-40a7-8ebe-17fc2e5df61b.json  20260115_091802_297e4be4-d929-4358-8dd6-6f489e838553.json  20260115_091802_5b54c28e-c8cd-498c-bea2-8eed9a8d4fa5.json  20260115_091802_607f80b5-fc65-488e-961a-06ddfbdeeb08.json  20260115_091802_6dc76e7d-6d18-471e-9ca5-d8b3cb3a4b4d.json  20260115_091802_70a183ab-fd62-4e11-891f-98477b1e956d.json  20260115_091802_727c4857-ff83-445c-91c2-357af27b5d09.json  20260115_091802_9f56d849-5cd2-4928-b494-fa696b369391.json  20260115_091802_a0ceaaae-7e88-4e07-80f4-9aba24a02f2f.json  20260115_091802_ab530d15-f5a8-4d22-bd1c-7a8584353313.json  20260115_091802_b0cce3c0-abc0-4a66-adc4-c7f4ce19e54a.json  20260115_091802_b8ff2c4c-8564-4aa4-9971-355aa8489823.json  20260115_091802_bc187692-fdd0-4bf0-b328-2c3622565317.json  20260115_091802_bdcebd88-7552-4297-8fb8-209aa8d9a838.json  20260115_091802_cdf4e314-da2b-49e2-bb99-d560175be12d.json  20260115_091802_da324bf0-55ca-45ea-94ca-c44a002ef673.json  20260115_091803_003504b0-30f4-41fc-86fd-ce79e599baff.json  20260115_091803_019fa893-215f-436a-8e9b-02b29548facc.json  20260115_091803_039107b0-fa30-4167-9e45-e964b51aac49.json  20260115_091803_06403e8c-061a-437e-be27-4ec7ce21f773.json  (+81 more)
scripts/: SQS_README.md  common.py  (+14 more)
(+104 files in other folders)
